src/test/ui/nll/maybe-initialized-drop.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/maybe-initialized-drop.rs:26:5
   |
LL |     let wrap = Wrap { p: &mut x };
   |                          ------ borrow of `x` occurs here
LL |     x = 1; //~ ERROR cannot assign to `x` because it is borrowed [E0506]
   |     ^^^^^ assignment to borrowed `x` occurs here
LL | }
   | - borrow later used here, when `wrap` is dropped

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
